# derive-aliases

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crate/: Cargo.toml
crate/new_alias/: Cargo.toml
crate/new_alias/src/: lib.rs
crate/src/: alias_map.rs  codegen.rs  dsl.rs  lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: define.rs  derive.rs  export_derive_aliases.md  lib.rs  tokens.rs
src/: lib.rs
test/: Cargo.toml  derive_aliases.rs  more_derive_aliases.rs
test/src/: lib.rs  main.rs
tests/: Cargo.toml  annotation.rs  custom.rs  derive_aliases.rs  generated_helper_field.rs  helper_container.rs  helper_field.rs  more_derive_aliases.rs  serial.rs  test.rs  ui.rs
tests/src/: derive_aliases_doc.rs  lib.rs  main.rs
tests/ui/: extra_colon.rs  extra_colon.stderr  missing_alias_name.rs  missing_alias_name.stderr  missing_colon.rs  missing_colon.stderr  missing_comma.rs  missing_comma.stderr  missing_eq.rs  missing_eq.stderr  missing_last_segment.rs  missing_last_segment.stderr  missing_semicolon.rs  missing_semicolon.stderr  multiple_errors_in_1_declaration.rs  multiple_errors_in_1_declaration.stderr  multiple_syntax_errors_across_declarations.rs  multiple_syntax_errors_across_declarations.stderr  syntax_error_missing_alias_name.rs  syntax_error_missing_alias_name.stderr  test.stderr
