resolver = "2"

[package]
name = "derive_aliases"
description = "`#[derive]` aliases for reducing code boilerplate"
version = "0.2.2"
edition = "2021"
rust-version = "1.60"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias"]
readme = "../README.md"

[dependencies]
derive_aliases_proc_macro = { path = "proc_macro", version = "0.1" }

[workspace]
members = [".", "proc_macro"]
