resolver = "2"

[package]
name = "derive_aliases"
description = "`#[derive]` aliases for reducing code boilerplate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_aliases_proc_macro = { path = "proc_macro", version = "0.3", features = ["show"] }

[workspace]
members = [".", "proc_macro"]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.60"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias"]

[dev-dependencies]
# only used in doc example
zerocopy = { version = "0.8", features = ["derive"] }
