[package]
name = "derive_aliases"
description = "`#[derive]` aliases for reducing code boilerplate"
version = "0.2.0"
edition = "2021"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias"]

[lib]
proc-macro = true

[features]
workspace = []
