[package]
name = "derive_aliases"
description = "`#[derive]` aliases for reducing code boilerplate"
version = "0.2.2"
edition = "2021"
rust-version = "1.80"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
# note: this is only called if we'd get compiler errors anyway (for better error messages), so I
# still consider us to pull 0 dependencies
strsim = "0.11"
