[package]
name = "derive_aliases_proc_macro"
description = "Implementation detail of `derive_aliases` crate"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/derive-aliases"
license = "MIT OR Apache-2.0"
keywords = ["macros", "derive", "alias"]
readme = "../README.md"

[lib]
proc-macro = true

[features]
show = []
