[package]
name = "derive_aliases_proc_macro"
description = "Implementation detail of `derive_aliases` crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[features]
show = []

[dev-dependencies]
derive_aliases = { path = ".." }
